--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
 
 </head>
 <body>
@@ -77,6 +78,46 @@
                 <li class="items_redes"><a href=""><i class="fi fi-brands-github"></i></a></li>
             </ul>
             <button>Contate-me</button>
+        </section>
+
+        <section class="sobre container" name="sobre">
+            <div class="box_title">
+                <h1 class="title_section">Sobre</h1>
+                <h3 class="subtitle_section">Estou sempre aprendendo algo novo. <br> "AprendizagemContinua"</h3>
+            </div>
+            <div class="content">
+                <p class="sobre_text">Minha busca por transformação e crescimento pessoal me trouçe até aqui, sou apaixonado por programação por não gostar da repetição monotona do dia a dia. Estou sempre melhorando minhas habilidades, leio livros sobre técnicas de aprendizagem e memorização, e sou fascinado pelo desconhecido, sempre me desafiando a ultrapassar meus limites. <a href="https://www.linkedin.com/in/lucas-barbosa-9951bb242" target="_blank" class="link">Ver mais...</a><br><br>Eu sou Lucas Barbosa, desenvolvedor front-end, mas logo serei mais.</p> 
+                <ul class="exp">
+                    <li class="exp_items">
+                        <i class="fi fi-rr-business-time exp_icons"></i>
+                        <div class="exp_info">
+                            <p>0+ Anos</p>
+                            <p class="small">Experiência</p>
+                        </div>
+                    </li>
+                    <li class="exp_items">
+                        <i class="fi fi-rr-star exp_icons"></i>
+                        <div class="exp_info">
+                            <p>0+ Projetos</p>
+                            <p class="small">Concluídos</p>
+                        </div>
+                    </li>
+                    <li class="exp_items">
+                        <i class="fi fi-rr-social-network exp_icons"></i>
+                        <div class="exp_info">
+                            <p>0+ Clientes</p>
+                            <p class="small">Satisfeitos</p>
+                        </div>
+                    </li>
+                    <li class="exp_items">
+                        <i class="fi fi-rr-bulb exp_icons"></i>
+                        <div class="exp_info">
+                            <p>0+ Projetos</p>
+                            <p class="small">Pessoais</p>
+                        </div>
+                    </li>
+                </ul>         
+            </div>
         </section>
 
     </main>
