--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
 
 </head>
-<body>
+<body id="body">
 
     <!--====== Header ======-->
     <header class="header">
@@ -70,7 +70,7 @@
     <main class="main">
 
         <!--====== Inicio ======-->
-        <section class="inicio container" name="inicio">
+        <section class="inicio container" id="inicio">
             <h1>Lucas Barbosa</h1>
             <p>Desenvolvedor Front-End</p>
             <ul class="links_redes">
@@ -80,41 +80,38 @@
             <button>Contate-me</button>
         </section>
 
-        <section class="sobre container" name="sobre">
+        <!--====== Sobre ======-->
+
+        <section class="sobre container" id="sobre">
             <div class="box_title">
                 <h1 class="title_section">Sobre</h1>
                 <h3 class="subtitle_section">Estou sempre aprendendo algo novo. <br> "AprendizagemContinua"</h3>
             </div>
             <div class="content">
-                <p class="sobre_text">Minha busca por transformação e crescimento pessoal me trouçe até aqui, sou apaixonado por programação por não gostar da repetição monotona do dia a dia. Estou sempre melhorando minhas habilidades, leio livros sobre técnicas de aprendizagem e memorização, e sou fascinado pelo desconhecido, sempre me desafiando a ultrapassar meus limites. <a href="https://www.linkedin.com/in/lucas-barbosa-9951bb242" target="_blank" class="link">Ver mais...</a><br><br>Eu sou Lucas Barbosa, desenvolvedor front-end, mas logo serei mais.</p> 
+                <img src="https://img.freepik.com/vetores-gratis/astronauta-bonito-ler-livro-sobre-ilustracao-de-icone-de-desenho-animado-do-planeta-conceito-de-icone-de-tecnologia-de-ciencia-isolado-estilo-flat-cartoon_138676-2091.jpg" alt="">
+                <div class="box_sobre_text">
+                    <p class="sobre_text" id="sobre_text">Minha busca por transformação e crescimento pessoal me trouçe até aqui, sou apaixonado por programação por não gostar da repetição monotona do dia a dia. Estou sempre melhorando minhas habilidades, leio livros sobre técnicas de aprendizagem e memorização, e sou fascinado pelo desconhecido, sempre me desafiando a ultrapassar meus limites. <a href="https://www.linkedin.com/in/lucas-barbosa-9951bb242" target="_blank" class="link">Ver mais...</a><br><br>Eu sou Lucas Barbosa, desenvolvedor front-end, mas logo serei mais.</p> 
+                </div>
                 <ul class="exp">
                     <li class="exp_items">
                         <i class="fi fi-rr-business-time exp_icons"></i>
-                        <div class="exp_info">
-                            <p>0+ Anos</p>
-                            <p class="small">Experiência</p>
-                        </div>
+                        <p>0+ Anos</p>
+                        <p class="small">Experiência</p>
                     </li>
                     <li class="exp_items">
                         <i class="fi fi-rr-star exp_icons"></i>
-                        <div class="exp_info">
-                            <p>0+ Projetos</p>
-                            <p class="small">Concluídos</p>
-                        </div>
+                        <p>0+ Trabalhos</p>
+                        <p class="small">Concluídos</p>
                     </li>
                     <li class="exp_items">
                         <i class="fi fi-rr-social-network exp_icons"></i>
-                        <div class="exp_info">
-                            <p>0+ Clientes</p>
-                            <p class="small">Satisfeitos</p>
-                        </div>
+                        <p>0+ Clientes</p>
+                        <p class="small">Satisfeitos</p>
                     </li>
                     <li class="exp_items">
                         <i class="fi fi-rr-bulb exp_icons"></i>
-                        <div class="exp_info">
-                            <p>0+ Projetos</p>
-                            <p class="small">Pessoais</p>
-                        </div>
+                        <p>0+ Projetos</p>
+                        <p class="small">Pessoais</p>
                     </li>
                 </ul>         
             </div>
